fix scrollbars in firstmas dark

--- a/files/assets/css/dark_themes.css
+++ b/files/assets/css/dark_themes.css
@@ -1,3 +1,7 @@
+:root {
+	color-scheme: dark;
+}
+
 .tooltip-inner {
 	color: #d8d8d8 !important;
 	background-color: #313131 !important;
